# mekabot

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  index.html  params.json  setup.bash.in
m3core/python/: Makefile  Makefile.am  Makefile.in  setup.py
m3core/python/m3/: component.py  component_factory.py  gui.py  monitor.py  rt_proxy.py  toolbox_core.py  unit_conversion.py  widgets.py
m3core/python/m3rt/: component_base_pb2.py  eeprom.py  m3rt_toolbox.py
m3meka/: ChangeLog  Makefile  Makefile.am.no.rt  Makefile.in  NEWS  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
m3meka/autom4te.cache/: output.0  output.3  requests  traces.0  traces.2  traces.3  traces.4
m3meka/debian/: changelog  control  rules
m3meka/doc/: Makefile  commands_humanoid.rst  commands_jointarray.rst  commands_omnibase.rst  conf.py  index.rst  inv_kine.rst  m3dsp_pdo_size_calc.xls  status_humanoid.rst  status_jointarray.rst  status_omnibase.rst
m3meka/doc/cpp/: Doxyfile
m3meka/ikfast_config/: m3_a1r1_left.robot.xml  m3_a1r1_right.robot.xml  m3_a2r1_left.robot.xml  m3_a2r1_right.robot.xml  m3_a2r2_left.robot.xml  m3_a2r2_right.robot.xml
m3meka/python/: Makefile  Makefile.am  Makefile.am~  Makefile.in
m3meka/python/m3/: actuator.py  actuator_ec.py  actuator_ec_pb2.py  actuator_pb2.py  arm.py  async_io.py  chain.py  ctrl_simple.py  ctrl_simple_pb2.py  dynamatics.py  dynamatics_pb2.py  fan_ec.py  gripper.py  hand.py  hand_ua_pb2.py  haptic_demo.py  haptic_demo_pb2.py  head.py  head_s2csp_ctrl.py  head_s2csp_ctrl_pb2.py  humanoid.py  humanoid_pb2.py  humanoid_shm_pb2.py  ik_axis.py  ik_chain.py  joint.py  joint_array.py  joint_array.py~  joint_array_mode_pb2.py  joint_array_pb2.py  joint_mode_ros_pb2.py  joint_pb2.py  joint_slave.py  joint_trajectory.py  joint_zlift.py  joint_zlift_shm_pb2.py  led_matrix_ec.py  led_matrix_ec_pb2.py  led_matrix_ec_shm_pb2.py  ledx2_ec.py  (+54 more)
m3meka/robot_config/: m3_config.yml
m3meka/robot_config/pwr/: m3pwr_ec_pwr023.yml  m3pwr_pwr023.yml
m3meka/robot_config/sea/: m3actuator_ec_BMW_EC32.yml  m3actuator_ec_MAX2_EC45.yml  m3actuator_ec_j0.yml  m3actuator_j0.yml  m3ctrl_simple_j0.yml
m3meka/ros/kontrol/: CMakeCache.txt  CMakeLists.txt  Makefile  aseqdump.py  cmake_install.cmake  kontrol_node.py  manifest.xml
m3meka/ros/m3ctrl_msgs/: CMakeCache.txt  Makefile  cmake_install.cmake  manifest.xml
m3meka/ros/m3meka_msgs/: Makefile
m3meka/ros/shm_humanoid_controller/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  shm_humanoid_controller.cbp
m3meka/ros/shm_led_mouth/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  manifest.xml
m3meka/ros/shm_loadx6_publisher/: CMakeLists.txt
m3meka/ros/shm_omnibase_controller/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml  shm_omnibase_controller.cbp
m3meka/ros/shm_zlift_controller/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  manifest.xml
m3meka/scripts/: m3rt_printer_run
m3qa/: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
m3qa/animations/: demo_h2r2_fingers.via  demo_iss_wholebody.via  esp_test_a.via  kha1.via  m3hand_mh5_postures.yml  m3hand_mh7_postures.yml  m3hand_mh8_postures.yml  m3humanoid_mr6_poser_config.yml  m3humanoid_mr7_poser_config.yml  m3humanoid_right_arm_mr9_poser_config.yml  right_left_torso_demo_a.via
m3qa/animations/mouth/: mouth1.tiff  sm0.tiff  sm1.tiff  smile.tiff  test.yml  test.yml~
m3qa/autom4te.cache/: output.2  traces.0  traces.1
m3qa/doc/: ros library paths.eml
m3qa/python/: Makefile  Makefile.am  Makefile.in
m3qa/python/m3qa/: calibrate.py  calibrate_actuator_ec_a1r1.py  calibrate_actuator_ec_r1.py  calibrate_actuator_ec_r2.py  calibrate_actuator_ec_r3.py  calibrate_actuator_ec_r4.py  calibrate_arm_a1r1.py  calibrate_arm_a2r1.py  calibrate_arm_a2r2.py  calibrate_arm_a2r3.py  calibrate_arm_a2r4.py  calibrate_base_b1r1.py  calibrate_gripper_g1r1.py  calibrate_hand_h2r1.py  calibrate_hand_h2r2.py  calibrate_hand_h2r3.py  calibrate_hand_h2r4.py  calibrate_head_s2r1.py  calibrate_head_s2r2.py  calibrate_load_cell.py  calibrate_pwr.py  calibrate_sensors.py  calibrate_torso_t1r1.py  calibrate_torso_t2r1.py  calibrate_torso_t2r2.py  calibrate_torso_t2r3.py  config_arm.py  config_arm_a1r1.py  config_arm_a2r1.py  config_arm_a2r2.py  config_arm_a2r3.py  config_arm_a2r4.py  config_hand.py  config_hand_h2r1.py  config_hand_h2r2.py  config_hand_h2r3.py  config_hand_h2r4.py  config_head.py  config_head_s2r1.py  config_head_s2r2.py  (+20 more)
m3qa/robot_config_shipped/: m3_component_libs.yml  m3_config.yml  m3_config.yml.andy  m3_config.yml.backup  m3_config.yml.backup112310  m3_config.yml.bak  m3_config.yml.base  m3_config.yml.dev  m3_config.yml.esp  m3_config.yml.fts_hand  m3_config.yml.fts_hand~  m3_config.yml.full  m3_config.yml.htl_full  m3_config.yml.iir_full  m3_config.yml.iir_head  m3_config.yml.iss_full.virtual  m3_config.yml.iss_full_upper  m3_config.yml.iss_hand  m3_config.yml.iss_head_full  m3_config.yml.iss_zlift  m3_config.yml.ledx2  m3_config.yml.old  m3_config.yml.uta_full  m3_config.yml.uta_full.virtual  m3_config.yml.uta_full.virtual_lower  m3_config.yml.uta_hand  m3_config.yml.uta_head_full  m3_config.yml.uta_head_full.virtual  m3_config.yml.zlift
m3qa/robot_config_shipped/data/: FT9905 TWE.xls  (+38 more)
m3qa/robot_log/: hyst_a_dump.yaml  hyst_b_dump.yaml
m3qa/ros_config/: cam.launch  face_detect.launch  image_pipeline.launch  joy.launch  m3_launch.launch  manifest.xml  mekabot.launch  mekabot.launch.uta  mic_array.yml  middle_face_detect.launch  middle_pt_grey.launch  right_face_detect.launch  right_face_detect_bkgnd.launch
meka-ros-pkg/m3demo/: Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  config.h  config.status  configure  configure.ac  libtool
meka-ros-pkg/meka_driver/: CMakeLists.txt  manifest.xml
meka-ros-pkg/motionnode_imu/: CMakeLists.txt  imu_node  mainpage.dox  manifest.xml
(+2874 files in other folders)
