# M3 -- Meka Robotics Robot Components
# Copyright (c) 2010 Meka Robotics
# Author: edsinger@mekabot.com (Aaron Edsinger)
# 
# M3 is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# M3 is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with M3.  If not, see <http://www.gnu.org/licenses/>.

pkgpython_PYTHON = \
	m3/__init__.py\
	m3/rt_proxy.py\
	m3/monitor.py\
	m3/component_factory.py\
	m3/component.py\
	m3/toolbox_core.py\
	m3/widgets.py\
	m3/gui.py\
	m3/unit_conversion.py \
	m3rt/component_base_pb2.py\
	m3rt/m3rt_toolbox.py\
	m3rt/eeprom.py

dist_bin_SCRIPTS = \
	scripts/m3rt/m3rt_eeprom.py\
	scripts/m3rt/m3rt_ros_start.py\
	scripts/m3rt/m3rt_server.py\
	scripts/m3rt/m3rt_bus_init.py\
	scripts/m3rt/m3rt_firmware_update.py\
	scripts/dev/m3dev_component_test.py

