# M3 -- Meka Robotics Robot Components
# Copyright (c) 2010 Meka Robotics
# Author: edsinger@mekabot.com (Aaron Edsinger)
# 
# M3 is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# M3 is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with M3.  If not, see <http://www.gnu.org/licenses/>.

pkgpython_PYTHON = \
	m3/m3meka_factory_proxy.py\
	m3/actuator_ec.py\
	m3/actuator_ec_pb2.py\
	m3/actuator.py\
	m3/actuator_pb2.py\
	m3/joint.py\
	m3/joint_slave.py\
	m3/ik_axis.py\
	m3/ik_chain.py\
	m3/joint_pb2.py\
	m3/joint_array.py\
	m3/joint_array_pb2.py\
	m3/joint_array_mode_pb2.py\
	m3/dynamatics.py\
	m3/dynamatics_pb2.py\
	m3/chain.py\
	m3/arm.py\
	m3/hand.py\
	m3/gripper.py\
	m3/torso.py\
	m3/head.py\
	m3/robot.py\
	m3/robot_monitor.py\
	m3/robot_monitor_pb2.py\
	m3/humanoid.py\
	m3/humanoid_pb2.py\
	m3/head_s2csp_ctrl.py\
	m3/head_s2csp_ctrl_pb2.py\
	m3/joint_zlift.py\
	m3/omnibase.py\
	m3/omnibase_pb2.py\
	m3/pwr_ec.py\
	m3/pwr_ec_pb2.py\
	m3/pwr.py\
	m3/loadx1.py\
	m3/loadx1_pb2.py\
	m3/loadx1_ec.py\
	m3/loadx1_ec_pb2.py\
	m3/loadx6.py\
	m3/loadx6_pb2.py\
	m3/loadx6_ec.py\
	m3/loadx6_ec_pb2.py\
	m3/pwr_pb2.py\
	m3/toolbox_ros.py\
	m3/toolbox_head_s2.py\
	m3/toolbox_omnibase_b1.py\
	m3/vehicle.py\
	m3/viz.py\
	m3/led_matrix_ec.py\
	m3/led_matrix_ec_pb2.py\
	m3/ledx2_ec.py\
	m3/ledx2_ec_pb2.py\
	m3/ledx2xn_ec.py\
	m3/ledx2xn_ec_pb2.py\
	m3/m3_echub_eep.py\
	m3/m3_1100hub_eep.py\
	m3/m3_loadx6_eep.py\
	m3/m3_pwr_eep.py\
	m3/m3_actx1_eep.py\
	m3/m3_actx2_eep.py\
	m3/m3_actx3_eep.py\
	m3/m3_actx4_eep.py\
	m3/m3_bld_eep.py\
	m3/m3_ledx2_eep.py\
	m3/trajectory_pb2.py\
	m3/toolbox_ctrl.py\
	m3/toolbox_beh.py\
	m3/toolbox.py\
	m3/trajectory.py\
	m3/ctrl_simple.py\
	m3/ctrl_simple_pb2.py\
	m3/nanokontrol.py\
	m3/smoothing_mode_pb2.py\
	m3/haptic_demo.py\
	m3/haptic_demo_pb2.py

#	m3/tactile_pps22_ec_pb2.py
#	m3/tactile_pps22_ec.py
#	m3rt/m3_tactx2_eep.py
#	m3rt/m3_armh_eep.py
#	m3rt/m3_skin0_eep.py
#	m3/hand_ua.py
#	m3/hand_ua_pb2.py
#	m3/async_io.py
#	m3/async_io_pb2.py


dist_bin_SCRIPTS = \
	scripts/m3rt/ps3joy.py\
	scripts/dev/m3dev_actuator_ec_tuning.py\
	scripts/dev/m3dev_joint_tuning.py\
	scripts/dev/m3dev_humanoid_tuning.py\
	scripts/dev/m3dev_chain_tuning.py\
	scripts/dev/m3dev_log.py\
	scripts/dev/m3dev_scope.py\
	scripts/dev/m3dev_omnibase_tuning.py\
	scripts/dev/m3dev_omnibase_calibrate.py\
	scripts/dev/m3dev_omnibase_current.py\
	scripts/demo/m3_demo_behaviors.py\
	scripts/demo/m3_demo_omnibase_joy.py\
	scripts/demo/m3_demo_omnibase_pace.py\
	scripts/demo/m3_demo_omnibase_square.py\
	scripts/demo/m3_demo_rviz.py\
	scripts/demo/m3_demo_loadx6.py\
	scripts/demo/m3_demo_pwr.py\
	scripts/demo/m3_demo_ledx2.py\
	scripts/demo/m3_demo_tactile_pps22.py\
	scripts/demo/m3_demo_shapes.py\
	scripts/demo/m3_demo_trajectories.py\
	scripts/demo/m3_demo_gravity_comp.py\
	scripts/demo/m3_demo_head_s1r1.py\
	scripts/demo/m3_demo_head_s2r1.py\
	scripts/demo/m3_demo_zlift_z1r1.py\
	scripts/demo/m3_demo_hand_h2r1.py\
	scripts/demo/m3_demo_hand_h2r2.py\
	scripts/demo/m3_demo_hand_h2r3.py\
	scripts/demo/m3_demo_hand_h2r4.py\
	scripts/demo/m3_demo_hand_h2r5.py\
	scripts/demo/m3_demo_hand_viz_h2r3.py\
	scripts/demo/m3_demo_gripper_g1r1.py\
	scripts/demo/m3_demo_ik_delta.py\
	scripts/demo/m3_demo_poser.py\
	scripts/demo/m3_demo_torque_shm.py\
	scripts/demo/m3_demo_arm_a2r1.py\
	scripts/demo/m3_demo_arm_a2r4.py\
	scripts/demo/m3_demo_arm_korg.py\
	scripts/demo/m3_demo_bimanual_torso_a2r2_t2r2.py\
	scripts/demo/m3_demo_arm_torso_a2r4_t2r3.py\
	scripts/demo/m3_demo_face_detect.py\
	scripts/tutorials/m3_tutorial_1.py\
	scripts/tutorials/m3_tutorial_2.py\
	scripts/tutorials/m3_tutorial_3.py\
	scripts/tutorials/m3_tutorial_4.py\
	scripts/dev/m3dev_actuator_ec_tuning2.py\
	scripts/dev/m3dev_actuator_tuning.py\
	scripts/dev/m3dev_ctrl_simple_tuning.py\
	scripts/dev/m3dev_tuning.py
	

#	scripts/demo/m3_demo_head_s2r2_cart.py
