
pkgpython_PYTHON = \
	m3qa/__init__.py\
	m3qa/sys_test.py\
	m3qa/calibrate_actuator_ec_r4.py\
	m3qa/calibrate_actuator_ec_r3.py\
	m3qa/calibrate_actuator_ec_r2.py\
	m3qa/calibrate_actuator_ec_r1.py\
	m3qa/calibrate_actuator_ec_a1r1.py\
	m3qa/calibrate_hand_h2r1.py\
	m3qa/calibrate_hand_h2r2.py\
	m3qa/calibrate_hand_h2r3.py\
	m3qa/calibrate_hand_h2r4.py\
	m3qa/calibrate_head_s2r1.py\
	m3qa/calibrate_head_s2r2.py\
	m3qa/calibrate_gripper_g1r1.py\
	m3qa/calibrate_torso_t1r1.py\
	m3qa/calibrate_arm_a1r1.py\
	m3qa/calibrate_arm_a2r1.py\
	m3qa/calibrate_arm_a2r2.py\
	m3qa/calibrate_arm_a2r3.py\
	m3qa/calibrate_arm_a2r4.py\
	m3qa/calibrate_torso_t2r1.py\
	m3qa/calibrate_torso_t2r2.py\
	m3qa/calibrate_torso_t2r3.py\
	m3qa/calibrate_base_b1r1.py\
	m3qa/calibrate_pwr.py\
	m3qa/calibrate.py\
	m3qa/calibrate_sensors.py\
	m3qa/calibrate_load_cell.py\
	m3qa/config_pwr.py\
	m3qa/config_loadx6.py\
	m3qa/config_robot.py\
	m3qa/config_head.py\
	m3qa/config_head_s2r1.py\
	m3qa/config_head_s2r2.py\
	m3qa/config_arm.py\
	m3qa/config_arm_a1r1.py\
	m3qa/config_arm_a2r1.py\
	m3qa/config_arm_a2r2.py\
	m3qa/config_arm_a2r3.py\
	m3qa/config_arm_a2r4.py\
	m3qa/config_torso_t1r1.py\
	m3qa/config_torso_t2r1.py\
	m3qa/config_torso_t2r2.py\
	m3qa/config_torso_t2r3.py\
	m3qa/config_torso.py\
	m3qa/config_omnibase_b1r1.py\
	m3qa/config_zlift_z1r1.py\
	m3qa/config_omnibase.py\
	m3qa/config_zlift.py\
	m3qa/config_hand_h2r1.py\
	m3qa/config_hand_h2r2.py\
	m3qa/config_hand_h2r3.py\
	m3qa/config_hand_h2r4.py\
	m3qa/config_hand.py\
	m3qa/config_rviz.py\
	m3qa/config_toolbox.py
dist_bin_SCRIPTS = \
	scripts/tools/m3qa_calibrate.py\
	scripts/tools/m3qa_display_calibration.py\
	scripts/tools/m3qa_config.py\
	scripts/tools/m3qa_unit_test.py\
	scripts/tools/m3qa_sys_test.py\
	scripts/tools/m3qa_sensor_noise.py\
	scripts/tools/m3qa_encoder_error.py\
	scripts/tools/m3qa_batch_sensor_zero.py\
	scripts/tools/m3qa_batch_torque_zero.py\
	scripts/tools/m3qa_batch_firmware_update.py\
	scripts/tools/m3qa_batch_file_rename.py\
	scripts/tools/m3qa_batch_search_and_replace.py\
 	scripts/tools/m3qa_batch_svn_rmdir.py\
	scripts/tools/m3qa_eeprom_sn.py
